--- a/fwdpp/internal/Makefile.am
+++ b/fwdpp/internal/Makefile.am
@@ -5,5 +5,6 @@ pkginclude_HEADERS=mutation_internal.hpp \
 	recombination_common.hpp \
 	gsl_discrete.hpp \
 	multilocus_rec.hpp \
-	IOhelp.hpp
+	IOhelp.hpp \
+	ms_sampling.hpp
 
