-I.., so that config.h gets found

--- a/devtools/skeleton/src/Makefile.am
+++ b/devtools/skeleton/src/Makefile.am
@@ -2,7 +2,7 @@ bin_PROGRAMS=FWDPPPACKAGE
 
 FWDPPPACKAGE_SOURCES=FWDPPPACKAGE.cc
 
-AM_CPPFLAGS=-W -Wall -I.
+AM_CPPFLAGS=-W -Wall -I. -I..
 
 if DEBUG
 else !DEBUG
