--- a/fwdpp/Makefile.am
+++ b/fwdpp/Makefile.am
@@ -1,6 +1,6 @@
 pkgincludedir=$(prefix)/include/fwdpp
 
-SUBDIRS=internal
+SUBDIRS=internal tags
 pkginclude_HEADERS=debug.hpp \
 	diploid_functions.hpp \
 	diploid_gamete_based.hpp \
