check for accumulators

--- a/configure.ac
+++ b/configure.ac
@@ -32,6 +32,9 @@ AC_CHECK_HEADER(boost/test/unit_test.hpp, BUNITTEST=1,[echo "boost/test/unit_tes
 AC_CHECK_HEADER(boost/pool/pool_alloc.hpp, [AC_DEFINE([HAVE_BOOST_POOL_ALLOC],[1],[Define if boost/pool/pool_alloc.hpp exists])])
 AC_CHECK_HEADER(boost/unordered_set.hpp,[AC_DEFINE([HAVE_BOOST_UNORDERED_SET],[1],[Define if boost/unordered_set.hpp exists])]) 
 AC_CHECK_HEADER(boost/functional/hash.hpp, [AC_DEFINE([HAVE_BOOST_HASH],[1],[Define if boost/functional/hash.hpp exists])])
+AC_CHECK_HEADER(boost/accumulators/accumulators.hpp,[AC_DEFINE([HAVE_BOOST_ACCUMULATORS],[1],[Define if boost accumulators are present],[Echo "some examples will not be compiled"])])
+AC_CHECK_HEADER(boost/accumulators/statistics/stats.hpp,[AC_DEFINE([HAVE_BOOST_STATS],[1],[Define if boost stats header is present],[Echo "some examples will not be compiled"])])
+AC_CHECK_HEADER(boost/accumulators/statistics/variance.hpp,[AC_DEFINE([HAVE_BOOST_VARIANCE],[1],[Define if boost variance header is present],[Echo "some examples will not be compiled"])])
 AC_CHECK_HEADER(Sequence/SimDataIO.hpp, , [AC_MSG_ERROR([Sequence/SimDataIO.hpp not found. libsequence (www.molpopgen.org) >= 1.7.8 required.])])
 AC_CHECK_HEADER(gsl/gsl_rng.h,HAVE_GSL=1,[AC_MSG_ERROR([gsl/gsl_rng.h not found.  Please install the GNU Scientific Library])])
 AC_CHECK_HEADER(gsl/gsl_randist.h,HAVE_GSL=1,[AC_MSG_ERROR([gsl/gsl_rng.h not found.  Please install the GNU Scientific Library])])
