--- a/unit/Makefile.am
+++ b/unit/Makefile.am
@@ -6,7 +6,8 @@ check_PROGRAMS=mutateTest \
 	mutationTest \
 	policyTests \
 	mlocusCrossoverTest \
-	siteDepFitness
+	siteDepFitness \
+	sugar1
 
 mutateTest_SOURCES=mutateTest.cc 
 crossoverTest_SOURCES=crossoverTest.cc
@@ -15,6 +16,7 @@ mutationTest_SOURCES=mutationTest.cc
 policyTests_SOURCES=policyTests.cc
 mlocusCrossoverTest_SOURCES=mlocusCrossoverTest.cc
 siteDepFitness_SOURCES=siteDepFitness.cc
+sugar1_SOURCES=sugar1.cc
 
 AM_CXXFLAGS=
 
