--- a/unit/Makefile.in
+++ b/unit/Makefile.in
@@ -81,7 +81,8 @@ POST_UNINSTALL = :
 @BUNIT_TEST_PRESENT_TRUE@	mutationTest$(EXEEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	policyTests$(EXEEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	mlocusCrossoverTest$(EXEEXT) \
-@BUNIT_TEST_PRESENT_TRUE@	siteDepFitness$(EXEEXT)
+@BUNIT_TEST_PRESENT_TRUE@	siteDepFitness$(EXEEXT) \
+@BUNIT_TEST_PRESENT_TRUE@	sugar1$(EXEEXT)
 @BUNIT_TEST_PRESENT_TRUE@am__append_1 = $(AM_LIBS)
 subdir = unit
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
@@ -128,6 +129,10 @@ am__siteDepFitness_SOURCES_DIST = siteDepFitness.cc
 @BUNIT_TEST_PRESENT_TRUE@	siteDepFitness.$(OBJEXT)
 siteDepFitness_OBJECTS = $(am_siteDepFitness_OBJECTS)
 siteDepFitness_LDADD = $(LDADD)
+am__sugar1_SOURCES_DIST = sugar1.cc
+@BUNIT_TEST_PRESENT_TRUE@am_sugar1_OBJECTS = sugar1.$(OBJEXT)
+sugar1_OBJECTS = $(am_sugar1_OBJECTS)
+sugar1_LDADD = $(LDADD)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -160,14 +165,14 @@ am__v_CXXLD_1 =
 SOURCES = $(crossoverTest_SOURCES) $(gameteTest_SOURCES) \
 	$(mlocusCrossoverTest_SOURCES) $(mutateTest_SOURCES) \
 	$(mutationTest_SOURCES) $(policyTests_SOURCES) \
-	$(siteDepFitness_SOURCES)
+	$(siteDepFitness_SOURCES) $(sugar1_SOURCES)
 DIST_SOURCES = $(am__crossoverTest_SOURCES_DIST) \
 	$(am__gameteTest_SOURCES_DIST) \
 	$(am__mlocusCrossoverTest_SOURCES_DIST) \
 	$(am__mutateTest_SOURCES_DIST) \
 	$(am__mutationTest_SOURCES_DIST) \
 	$(am__policyTests_SOURCES_DIST) \
-	$(am__siteDepFitness_SOURCES_DIST)
+	$(am__siteDepFitness_SOURCES_DIST) $(am__sugar1_SOURCES_DIST)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -293,6 +298,7 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_PRESENT_TRUE@policyTests_SOURCES = policyTests.cc
 @BUNIT_TEST_PRESENT_TRUE@mlocusCrossoverTest_SOURCES = mlocusCrossoverTest.cc
 @BUNIT_TEST_PRESENT_TRUE@siteDepFitness_SOURCES = siteDepFitness.cc
+@BUNIT_TEST_PRESENT_TRUE@sugar1_SOURCES = sugar1.cc
 @BUNIT_TEST_PRESENT_TRUE@AM_CXXFLAGS = 
 @BUNIT_TEST_PRESENT_TRUE@AM_LIBS = -lboost_unit_test_framework
 all: all-am
@@ -361,6 +367,10 @@ siteDepFitness$(EXEEXT): $(siteDepFitness_OBJECTS) $(siteDepFitness_DEPENDENCIES
 	@rm -f siteDepFitness$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(siteDepFitness_OBJECTS) $(siteDepFitness_LDADD) $(LIBS)
 
+sugar1$(EXEEXT): $(sugar1_OBJECTS) $(sugar1_DEPENDENCIES) $(EXTRA_sugar1_DEPENDENCIES) 
+	@rm -f sugar1$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(sugar1_OBJECTS) $(sugar1_LDADD) $(LIBS)
+
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
 
@@ -374,6 +384,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mutationTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/policyTests.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/siteDepFitness.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar1.Po@am__quote@
 
 .cc.o:
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
