updated Makefile.stuff to new file structure

--- a/fwdpp/sugar/Makefile.am
+++ b/fwdpp/sugar/Makefile.am
@@ -2,4 +2,4 @@ pkgincludedir=$(prefix)/include/fwdpp/sugar
 
 SUBDIRS=singlepop
 
-pkginclude_HEADERS=serialization.hpp
+pkginclude_HEADERS=serialization.hpp singlepop.hpp
