--- a/fwdpp/sugar/Makefile.am
+++ b/fwdpp/sugar/Makefile.am
@@ -1,5 +1,5 @@
 pkgincludedir=$(prefix)/include/fwdpp/sugar
 
-SUBDIRS=singlepop
+SUBDIRS=singlepop gsl
 
-pkginclude_HEADERS=serialization.hpp singlepop.hpp
+pkginclude_HEADERS=serialization.hpp singlepop.hpp GSLrng_t.hpp
