--- a/Makefile.in
+++ b/Makefile.in
@@ -287,7 +287,7 @@ top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign
 SUBDIRS = fwdpp examples unit
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST = doc/fwdpp.doxygen examples/*.cc examples/*.hpp examples/Makefile LICENSE
+EXTRA_DIST = doc/fwdpp.doxygen examples/*.cc examples/*.hpp examples/Makefile extentions/*.cc extensions/*.py LICENSE
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
