metapop sugar layer now gets installed

--- a/fwdpp/sugar/Makefile.am
+++ b/fwdpp/sugar/Makefile.am
@@ -1,5 +1,5 @@
 pkgincludedir=$(prefix)/include/fwdpp/sugar
 
-SUBDIRS=singlepop gsl
+SUBDIRS=singlepop metapop gsl
 
-pkginclude_HEADERS=serialization.hpp singlepop.hpp GSLrng_t.hpp
+pkginclude_HEADERS=serialization.hpp singlepop.hpp metapop.hpp GSLrng_t.hpp
