dispatch tags for population types added to sugar layer and used to selected the correct operator() for serialization

--- a/fwdpp/sugar/Makefile.am
+++ b/fwdpp/sugar/Makefile.am
@@ -1,5 +1,5 @@
 pkgincludedir=$(prefix)/include/fwdpp/sugar
 
-SUBDIRS=singlepop metapop gsl
+SUBDIRS=singlepop metapop gsl poptypes
 
 pkginclude_HEADERS=serialization.hpp singlepop.hpp metapop.hpp GSLrng_t.hpp
