sugar layer for some common types of mutations

--- a/fwdpp/sugar/Makefile.am
+++ b/fwdpp/sugar/Makefile.am
@@ -2,4 +2,4 @@ pkgincludedir=$(prefix)/include/fwdpp/sugar
 
 SUBDIRS=singlepop metapop gsl poptypes
 
-pkginclude_HEADERS=serialization.hpp singlepop.hpp metapop.hpp GSLrng_t.hpp
+pkginclude_HEADERS=serialization.hpp singlepop.hpp metapop.hpp GSLrng_t.hpp popgenmut.hpp infsites.hpp
