--- a/fwdpp/sugar/Makefile.in
+++ b/fwdpp/sugar/Makefile.in
@@ -292,7 +292,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = singlepop metapop gsl poptypes
-pkginclude_HEADERS = serialization.hpp singlepop.hpp metapop.hpp GSLrng_t.hpp
+pkginclude_HEADERS = serialization.hpp singlepop.hpp metapop.hpp GSLrng_t.hpp popgenmut.hpp infsites.hpp
 all: all-recursive
 
 .SUFFIXES:
