minor doc tweaks.  sugar suppor for single-population, mulilocus simulations

--- a/fwdpp/sugar/Makefile.am
+++ b/fwdpp/sugar/Makefile.am
@@ -1,5 +1,5 @@
 pkgincludedir=$(prefix)/include/fwdpp/sugar
 
-SUBDIRS=singlepop metapop gsl poptypes
+SUBDIRS=singlepop metapop multiloc gsl poptypes
 
-pkginclude_HEADERS=serialization.hpp singlepop.hpp metapop.hpp GSLrng_t.hpp popgenmut.hpp infsites.hpp
+pkginclude_HEADERS=serialization.hpp singlepop.hpp metapop.hpp multiloc.hpp GSLrng_t.hpp popgenmut.hpp infsites.hpp
