typo fixed that broke make dist

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 AUTOMAKE_OPTIONS = foreign
 SUBDIRS=fwdpp examples unit
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST=doc/fwdpp.doxygen examples/*.cc examples/*.hpp examples/Makefile extentions/*.cc extensions/*.py LICENSE
+EXTRA_DIST=doc/fwdpp.doxygen examples/*.cc examples/*.hpp examples/Makefile extensions/*.cc extensions/*.py LICENSE
