--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -16,7 +16,7 @@ check_PROGRAMS=diploid \
 	pfix \
 	RHH \
 	TFL2013 \
-	HOCind
+	HOC_ind
 
 diploid_SOURCES=diploid.cc common_gamete.hpp
 diploid_ind_SOURCES=diploid_ind.cc common_ind.hpp
@@ -36,7 +36,7 @@ diploid_twopop_mig_SOURCES=diploid_twopop_mig.cc common_gamete.hpp
 pfix_SOURCES=pfix.cc
 RHH_SOURCES=RHH.cc
 TFL2013_SOURCES=TFL2013.cc
-HOCind_SOURCES=HOCind.cc
+HOC_ind_SOURCES=HOC_ind.cc
 
 AM_CPPFLAGS=-Wall -W -I.
 
